[package]
name = "mongodb-cursor-pagination"
version = "0.3.3"
authors = ["Kylian Lichtensteiger <e38c1a93@srylax.dev"]
edition = "2021"
license = "MIT"
keywords = ["mongo", "mongodb", "database", "cursor", "pagination"]
readme = "README.md"
repository = "https://github.com/Srylax/mongodb-cursor-pagination"
description = """
Provides cursor based pagination for the native MongoDB driver in Rust.
"""

[features]
default = []
graphql = ["juniper"]

[dependencies]
base64 = "0.22.1"
bson = "2"
log = "0.4"
mongodb = "3"
serde = "1"
juniper = { version = "0.16.1", optional = true }
futures = "0.3"
futures-util = "0.3"
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
